<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_get_last_version"
        android:orderInCategory="110"
        android:title="@string/menu_get_last_version"/>
    <item
        android:id="@+id/action_get_last_version_data"
        android:orderInCategory="120"
        android:title="@string/menu_get_last_data"/>
    <item
        android:id="@+id/action_get_small_images"
        android:orderInCategory="140"
        android:title="@string/menu_get_small_image"/>
    <item
        android:id="@+id/action_get_full_images"
        android:orderInCategory="150"
        android:title="@string/menu_get_full_image"/>
    <item
            android:id="@+id/action_h5"
            android:orderInCategory="160"
            android:title="@string/menu_web_view"/>
    <item
        android:id="@+id/action_get_version_20220408"
        android:orderInCategory="170"
        android:title="20220408"/>
</menu>