<?xml version="1.0" encoding="utf-8"?>
 <ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">

            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                <TextView android:id="@+id/tv_id" android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_alignParentStart="true" android:layout_centerVertical="true"/>
                <TextView android:id="@+id/tv_time" android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_marginStart="10dp" android:layout_centerVertical="true"
                          android:layout_toEndOf="@id/tv_id"/>
                <Button android:id="@+id/btn_update" android:layout_width="wrap_content" android:layout_height="30dp"
                        android:text="@string/btn_update_image" android:padding="0dp"
                        android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical"
                          style="@style/LayoutRounding">
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/LayoutRowInRounding">
                    <TextView android:id="@+id/tv_name" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/TextViewTitle"/>
                    <TextView android:id="@+id/tv_cloth" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="10dp"/>
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/LayoutRowInRoundingTop">
                    <TextView android:id="@+id/tv_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="20dp"/>
                    <TextView android:id="@+id/tv_lane" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/LayoutRowInRoundingTopDash">
                    <TextView android:id="@+id/tv_description" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp"
                            android:paddingLeft="50dp" android:paddingRight="50dp">
                <ImageView android:id="@+id/iv_detail"
                           android:scaleType="fitCenter"
                           android:contentDescription="@string/full_image"
                           android:adjustViewBounds="true"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"  >
                <com.mx.cosmo.common.NestedListView android:id="@+id/ll_tiers"
                                                    android:layout_width="200dp"
                                                    android:layout_height="wrap_content"
                                                    style="@style/ListViewTier"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/TextViewTitle" android:layout_marginStart="2dp"  android:text="@string/title_basic_info"/>
            </LinearLayout>
            <android.support.v4.view.ViewPager
                    android:id="@+id/vp_basicinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/LayoutRoundingWithPadding">
            </android.support.v4.view.ViewPager>
            <com.mx.cosmo.common.EnhancedWrapContentViewPager
                    android:id="@+id/vp_skills1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp">
            </com.mx.cosmo.common.EnhancedWrapContentViewPager>
            <com.mx.cosmo.common.EnhancedWrapContentViewPager
                    android:id="@+id/vp_skills2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    style="@style/LayoutRowInRoundingTopDash">
            </com.mx.cosmo.common.EnhancedWrapContentViewPager>
            <com.mx.cosmo.common.EnhancedWrapContentViewPager
                    android:id="@+id/vp_skills3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    style="@style/LayoutRowInRoundingTopDash">
            </com.mx.cosmo.common.EnhancedWrapContentViewPager>
            <com.mx.cosmo.common.EnhancedWrapContentViewPager
                    android:id="@+id/vp_skills4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    style="@style/LayoutRowInRoundingTopDash">
            </com.mx.cosmo.common.EnhancedWrapContentViewPager>
        </LinearLayout>
</ScrollView>